# Litetower

./: .env.example  LICENSE  README.md  pyproject.toml
demo/: README.md  bot.py
demo/plugins/: echo.py  guild.py  lifecycle.py  msglog.py  proactive.py  robot.py
src/litetower/: __init__.py  app.py  logging.py
src/litetower/beacon/: __init__.py  behaviour.py  channel.py  cube.py  manager.py  schema.py
src/litetower/beacon/builtins/: letoderea.py
src/litetower/config/: __init__.py  debug.py
src/litetower/events/: __init__.py  builtin.py  common.py  message.py  proactive.py  robot.py
src/litetower/message/: __init__.py  element.py  keyboard.py
src/litetower/message/parser/: __init__.py  base.py  msgsaw.py
src/litetower/models/: __init__.py  api.py  author.py  content.py  scene.py  target.py  webhook.py
src/litetower/models/elements/: __init__.py  guild.py  normal.py
src/litetower/network/: __init__.py  qqapi.py  sign.py  webhook.py
src/litetower/services/: auth.py  httpx.py  uvicorn.py
src/litetower/utils/: __init__.py  debug.py  guild.py
